# client-cpp

./: .clang-format  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CodeCoverage.cmake  README.md  VERSION  build.sh  common.h  documentation.cmake  grpc-protobuf-install.sh  spine-install.sh  spine-proto.cmake
cmake/: code_coverage.cmake  dependencies.cmake  dependencies.cmake.in  docs.cmake  gtest_cmake.in  spine_cpp_lib.cmake  spine_proto.cmake  unit_tests.cmake
cmake/Poco/: PocoCryptoTargets-release.cmake  PocoCryptoTargets.cmake  PocoDataSQLiteTargets-release.cmake  PocoDataSQLiteTargets.cmake  PocoDataTargets-release.cmake  PocoDataTargets.cmake  PocoFoundationTargets-release.cmake  PocoFoundationTargets.cmake  PocoJSONTargets-release.cmake  PocoJSONTargets.cmake  PocoMongoDBTargets-release.cmake  PocoMongoDBTargets.cmake  PocoNetSSLTargets-release.cmake  PocoNetSSLTargets.cmake  PocoNetTargets-release.cmake  PocoNetTargets.cmake  PocoRedisTargets-release.cmake  PocoRedisTargets.cmake  PocoUtilTargets-release.cmake  PocoUtilTargets.cmake  PocoXMLTargets-release.cmake  PocoXMLTargets.cmake  PocoZipTargets-release.cmake  PocoZipTargets.cmake
examples/hello_world/: CMakeLists.txt  build.gradle
examples/hello_world/cpp-client-reader/: main_receiver.cc
examples/hello_world/cpp-client-sender/: main_sender.cc
examples/hello_world/java-server/: build.gradle
examples/hello_world/java-server/src/main/java/io/spine/helloworld/: HelloAggregate.java  HelloProjection.java  ServerApp.java
examples/hello_world/model/src/main/proto/: hello.proto
examples/hello_world/scripts/: generate-descriptor-set.gradle
examples/todolist/: CMakeLists.txt  README.md  todolist.cc  todolist.cpp
examples/todolist/cmake/: dependencies.cmake.in
examples/todolist/command_handler/: command_handler.cpp  command_handler.h  command_handler.hpp  command_handler_impl.cc  command_handler_impl.h
examples/todolist/console_view/: console_view.h  console_view_impl.cc  console_view_impl.h  console_writer.cc  console_writer.h
examples/todolist/model/: TODO  download_proto.sh
examples/todolist/model/todolist/: attributes.proto  changes.proto  identifiers.proto  model.proto  validation_rules.proto  values.proto
examples/todolist/model/todolist/c/: commands.proto  enrichments.proto  events.proto  rejections.proto
examples/todolist/model/todolist/q/: projections.proto
examples/todolist/resources/: resources.h
examples/todolist/src/: todolist.cc
examples/todolist/task_manager/: base_task.cc  base_task.h  create_simple_task.cc  create_simple_task.h  create_task.cc  create_task.cpp  create_task.h  create_task.hpp  create_task_label.cc  create_task_label.h  list_task.cc  list_task.cpp  list_task.h  list_task.hpp  main_task.cc  main_task.h  task_completer.cc  task_completer.h  task_logger.cc  task_logger.h  task_manager.cc  task_manager.cpp  task_manager.h  task_manager.hpp  task_runner.cc  task_runner.h  todo_task.cc  todo_task.h
include/: command_factory.h  types.h
include/spine/: actor_request_factory.h  actor_request_factory_params.h  command_factory.h  filters.h  message_utils.hpp  query_builder.h  query_factory.h  query_utils.h  topic_factory.h  type_url.h  types.h  validator.h
include/spine/util/: any_utils.h  any_utils.hpp  message_utils.hpp  target_utils.h  target_utils.hpp
samples/hello_world/: CMakeLists.txt  settings.gradle
samples/hello_world/cpp-client-reader/: main_receiver.cc
samples/hello_world/cpp-client-sender/: main_sender.cc
samples/hello_world/gradle/wrapper/: gradle-wrapper.properties
samples/hello_world/java-server/src/main/java/io/spine/helloworld/: HelloRepository.java  LastHelloRepository.java
samples/hello_world/model/: build.gradle
samples/hello_world/model/src/main/proto/: hello.proto
src/: actor_request_factory.cc  actor_request_factory.h  actor_request_factory_params.cc  actor_request_factory_params.h  command_factory.cc  command_factory.h  common.cc  common.h  query_builder.cc  query_factory.cc  query_factory.h  query_utils.cc  topic_factory.cc  topic_factory.h  type_url.cc  type_url.h  types.h  validator.cc
src/util/: any_utils.cc  target_utils.cc
test/: actor_request_factory_params_test.cc  actor_request_factory_test.cc  command_factory_test.cc  common_factory_test.h  common_test.cc  query_builder_test.cc  query_factory_test.cc  topic_factory_test.cc  type_url_test.cc  unit_tests.proto  unit_tests_no_prefix.proto  validator_test.cc
